[project]
name = "claude-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.14.16",
    "openai>=1.99.1",
    "polars>=1.32.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.55.0",
]
[tool.marimo.runtime]
dotenv = [".env"]